--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/dashboard.html
@@ -2,13 +2,13 @@
     <div class="col-md-12">
         <h2>Dashboard</h2>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
         <h3>Assigned Projects</h3>
         <div ng-repeat="issue in myIssues.Issues | unique:'issue'">
             <a ng-href="#/projects/{{issue.Project.Id}}">{{issue.Project.Name}}</a>
         </div>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-9">
         <h3>Assigned Issues</h3>
         <table class="table">
             <thead>
@@ -36,7 +36,25 @@
         </div>
     </div>
     <div class="col-md-12" ng-if="authServices.isAdministrator()">
-        <a href="#/projects/add" class="btn btn-success">Add New Project</a>
+        <!-- Button trigger modal -->
+        <button class="btn btn-success" data-toggle="modal" data-target="#addProject">Add New Project</button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="addProject" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div ng-controller="ProjectsController"
+                             ng-include="'views/templates/projects/add-project.html'"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <a href="#/projects" class="btn btn-success">List All Projects</a>
     </div>
 </div>
