--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit-project.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit-project.html
@@ -1,45 +1,47 @@
-<form name="editProjectForm" class="form-horizontal">
+<form name="editProjectForm" class="form-horizontal" ng-if="isProjectLeader || isAdmin">
     <div class="form-group">
         <div class="col-md-offset-2 col-md-9">
-            <h2>Edit Project</h2>
+            <h3>Edit Project</h3>
         </div>
     </div>
     <div class="form-group">
         <label for="name" class="control-label col-md-3">Name</label>
-        <div class="col-md-6">
+        <div class="col-md-8">
             <input type="text" id="name" ng-model="project.Name" class="form-control" required="required">
         </div>
     </div>
     <div class="form-group">
         <label for="description" class="control-label col-md-3">Description</label>
-        <div class="col-md-6">
+        <div class="col-md-8">
             <textarea id="description" ng-model="project.Description" class="form-control" required="required">
                 {{project.Description}}
             </textarea>
         </div>
     </div>
     <div class="form-group">
-        <label for="leadId" class="control-label col-md-3">Lead ID</label>
-        <div class="col-md-6">
-            <input type="text" id="leadId" ng-model="project.Lead.Id" class="form-control" required="required">
-        </div>
-    </div>
-    <div class="form-group">
         <label for="labels" class="control-label col-md-3">Labels</label>
-        <div class="col-md-6">
-            <input type="text" id="labels" ng-model="labels" class="form-control" required="required">
+        <div class="col-md-8">
+            <input type="text" id="labels" ng-model="project.Labels" to-string-formatter to-array-object-parser
+                   class="form-control" required="required">
         </div>
     </div>
     <div class="form-group">
         <label for="priority" class="control-label col-md-3">Priorities</label>
-        <div class="col-md-6">
-            <input type="text" id="priority" ng-model="priorities" class="form-control" required="required">
+        <div class="col-md-8">
+            <input type="text" id="priority" ng-model="project.Priorities" to-string-formatter to-array-object-parser
+                   class="form-control" required="required">
+        </div>
+    </div>
+    <div class="form-group" ng-if="isAdmin">
+        <label for="leadId" class="control-label col-md-3">Lead ID</label>
+        <div class="col-md-8">
+            <input type="text" id="leadId" ng-model="project.Lead.Id" class="form-control" required="required">
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-9 col-md-offset-3">
             <button class="btn btn-primary" ng-disabled="editProjectForm.$invalid"
-                    ng-click="editProject(project, labels, priorities)">Edit
+                    ng-click="editProject(project)">Edit
             </button>
             <a ng-href="#/projects/{{projectId}}" class="btn btn-default">Cancel</a>
         </div>
