--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/project-by-id.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/project-by-id.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-md-12">
         <h3>Project
-            <span ng-show="isAdmin">
-                    <a href="#/projects/{{projectId}}/edit" class="btn btn-success btn-sm">Edit</a>
+            <span ng-if="isProjectLeader || isAdmin">
+                    <a ng-href="#/projects/{{projectId}}/edit" class="btn btn-success btn-sm">Edit</a>
             </span>
         </h3>
     </div>
@@ -34,11 +34,27 @@
         </div>
     </div>
     <div class="col-md-12">
-        <h3>Project Issues
-            <span ng-show="isAdmin">
-                    <a href="#/projects/{{projectId}}/add-issue" class="btn btn-success btn-sm">Add</a>
-            </span>
-        </h3>
+        <h3 class="inline-block">Project Issues</h3>
+        <div ng-if="isAdmin" class="inline-block">
+            <!-- Button trigger modal -->
+            <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#addIssue">Add</button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="addIssue" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div ng-controller="ProjectsController" ng-include="'views/templates/projects/add-issue.html'"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="col-md-12">
         <table class="table table-hover">
@@ -53,7 +69,7 @@
             <tbody ng-repeat="issue in issues">
             <tr>
                 <td><a ng-href="#/issues/{{issue.Id}}">{{issue.Title}}</a></td>
-                <td>{{issue.Description}}</td>
+                <td class="col-md-4">{{issue.Description}}</td>
                 <td>{{issue.DueDate | date}}</td>
                 <td>{{issue.Assignee.Username}}</td>
             </tr>
