--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/register-login.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/register-login.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-8 col-md-offset-2" ng-controller="AccordionController">
+    <div class="col-md-9 col-md-offset-2 col-lg-8" ng-controller="AccordionController">
         <uib-accordion>
             <uib-accordion-group uib-accordion-header is-open="status.isFirstOpen">
                 <uib-accordion-heading>
