--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/issues/edit-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/issues/edit-issue.html
@@ -1,7 +1,4 @@
-<div ng-if="!isProjectLeader || !isAssignee">
-    <div>{{issuesServices.redirect()}}</div>
-</div>
-<div ng-if="isProjectLeader || isAssignee">
+<div ng-if="isProjectLeader || isAssignee || isAdmin">
     <form name="editIssueForm" class="form-horizontal">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-9">
