--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
@@ -35,6 +35,16 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
 }
 
+/*.custom-tags.ng-pristine .tags {*/
+    /*box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
+    /*border: 1px solid #ccc*/
+/*}*/
+
+
+.ng-pristine.ng-untouched.ng-isolate-scope.ng-empty.ng-invalid.ng-invalid-required.ng-valid-max-tags.ng-valid-min-tags.ng-valid-leftover-text {
+
+}
+
 #loading-bar .bar {
     height: 3px;
 }
@@ -56,4 +66,23 @@
 }
 .inline-block {
     display: inline-block;
+}
+a,
+textarea:hover,
+input:hover,
+textarea:active,
+input:active,
+textarea:focus,
+input:focus,
+button:focus,
+button:active,
+button:hover
+{
+    outline: none ;
+    -webkit-appearance:none;
+}
+
+select:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #000;
 }
