--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/dashboard.html
@@ -5,7 +5,6 @@
     <div class="col-md-3">
         <h3>Assigned Projects</h3>
         <div ng-repeat="issue in myIssues.Issues | uniqueObject: 'Project': 'Name'">
-            <!--<div>{{issue}}</div>-->
             <a ng-href="#/projects/{{issue.Project.Id}}">{{issue.Project.Name}}</a>
         </div>
     </div>
@@ -39,27 +38,12 @@
     <div class="col-md-12" ng-if="authServices.isAdministrator()">
         <!-- Button trigger modal -->
         <button class="btn btn-success" data-toggle="modal" data-target="#addProject">Add New Project</button>
-
+        <a href="#/projects" class="btn btn-default">List All Projects</a>
         <!-- Modal -->
-        <div class="modal fade" id="addProject" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        <h4 class="modal-title">Add Project</h4>
-                    </div>
-                    <div class="modal-body">
-                        <div ng-controller="ProjectsController"
-                             ng-include="'views/templates/projects/add-project.html'"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <a href="#/projects" class="btn btn-success">List All Projects</a>
+        <div ng-include="'views/modals/add-project-modal.html'"></div>
     </div>
 </div>
+
 
 
 
