--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/add-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/add-issue.html
@@ -1,27 +1,27 @@
 <form name="issueAddForm" class="form-horizontal">
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-md-offset-1 col-md-11">
             <h3>Add New Issue</h3>
         </div>
     </div>
     <div class="form-group">
-        <label for="title" class="control-label col-md-3">Title</label>
-        <div class="col-md-8">
+        <label for="title" class="control-label col-md-2">Title</label>
+        <div class="col-md-9">
             <input type="text" id="title" class="form-control" ng-model="issueData.Title" placeholder="Title"
                    required="required">
         </div>
     </div>
     <div class="form-group">
-        <label for="description" class="control-label col-md-3">Description</label>
-        <div class="col-md-8">
+        <label for="description" class="control-label col-md-2">Description</label>
+        <div class="col-md-9">
             <textarea id="description" ng-model="issueData.Description" class="col-md-8 form-control"
                       required="required"
                       placeholder="Description"></textarea>
         </div>
     </div>
     <div class="form-group">
-        <label for="assignee" class="control-label col-md-3">Assignee</label>
-        <div class="col-md-8">
+        <label for="assignee" class="control-label col-md-2">Assignee</label>
+        <div class="col-md-9">
             <select id="assignee" ng-model="issueData.AssigneeId" required="required" class="form-control">
                 <option value="" disabled>-- Select Assignee --</option>
                 <option ng-repeat="user in users | orderBy:'Username'" value="{{user.Id}}">{{user.Username}}</option>
@@ -29,8 +29,8 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="project" class="control-label col-md-3">Project</label>
-        <div class="col-md-8">
+        <label for="project" class="control-label col-md-2">Project</label>
+        <div class="col-md-9">
             <select id="project" ng-model="selectedProject"
                     ng-options="project.Name for project in projects | orderBy:'Name'"
                     required="required" class="form-control">
@@ -39,8 +39,8 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="issueKey" class="control-label col-md-3">Due Date</label>
-        <div class="col-md-8">
+        <label for="issueKey" class="control-label col-md-2">Due Date</label>
+        <div class="col-md-9">
             <div class="input-group">
                 <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt"
                        is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close"
@@ -54,8 +54,8 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="priority" class="control-label col-md-3">Priority</label>
-        <div class="col-md-8">
+        <label for="priority" class="control-label col-md-2">Priority</label>
+        <div class="col-md-9">
             <select id="priority" ng-model="issueData.PriorityId" required="required" class="form-control">
                 <option value="" disabled>-- Select Priority --</option>
                 <option ng-repeat="priority in selectedProject.Priorities" value="{{priority.Id}}">{{priority.Name}}
@@ -64,31 +64,17 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="labels" class="control-label col-md-3">Labels</label>
-        <div class="col-md-8">
-            <input type="text" id="labels" class="form-control" ng-model="issueData.Labels" to-array-object-parser
-                   placeholder="Labels" required="required">
+        <label for="labels" class="control-label col-md-2">Labels</label>
+        <div class="col-md-9">
+            <tags-input id="labels" ng-model="issueData.Labels" display-property="Name" placeholder="Labels"
+                        replace-spaces-with-dashes="false" required="required">
+                <auto-complete source="loadLabels($query)" min-length="0"></auto-complete>
+            </tags-input>
         </div>
-        <!--<div class="col-md-offset-3 col-md-6" ng-show="issueData.Labels.length > 0">-->
-        <!--<span>-->
-        <!--<span ng-repeat="project in projects">-->
-        <!--<span ng-if="$last">-->
-        <!--<span ng-repeat="label in project.Labels | filter:issueData.Labels">-->
-        <!--<span>{{label.Name}}{{$last ? '': ', '}}</span>-->
-        <!--</span>-->
-        <!--</span>-->
-        <!--<span ng-if="!$last">-->
-        <!--<span ng-repeat="label in project.Labels | filter:issueData.Labels">-->
-        <!--<span>{{label.Name}}, </span>-->
-        <!--</span>-->
-        <!--</span>-->
-        <!--</span>-->
-        <!--</span>-->
-        <!--</div>-->
     </div>
     <div class="form-group">
-        <div class="col-md-offset-3 col-md-9">
-            <button class="btn btn-success" ng-click="addIssue(issueData, selectedProject, dt)"
+        <div class="col-md-offset-2 col-md-10">
+            <button class="btn btn-success" ng-click="addIssue(issueData, selectedProject, dt, issueLabels)"
                     ng-disabled="issueAddForm.$invalid" data-dismiss="modal">
                 Add Issue
             </button>
