--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/project-by-id.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/project-by-id.html
@@ -6,7 +6,6 @@
             </span>
         </h3>
     </div>
-
     <div class="col-md-12">
         <p><span class="bold">Name: </span>{{project.Name}}</p>
         <p><span class="bold">Key: </span>{{project.ProjectKey}}</p>
@@ -28,78 +27,16 @@
         </p>
     </div>
     <div class="col-md-12">
-
         <h3 class="inline-block">Project Issues</h3>
         <div ng-if="isAdmin || isProjectLeader" class="inline-block">
             <!-- Button trigger modal -->
             <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#addIssue">Add</button>
-
             <!-- Modal -->
-            <div class="modal fade" id="addIssue" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <div ng-controller="ProjectsController"
-                                 ng-include="'views/templates/projects/add-issue.html'"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div ng-include="'views/modals/add-issue-modal.html'"></div>
         </div>
     </div>
-    <div class="col-md-2">
-        <div class="checkbox">
-            <label><input type="checkbox" ng-model="checked" ng-click="filterIssues()"/>Show all issues</label>
-        </div>
-        <div>
-            <h5 class="bold">Filter by due date:</h5>
-            <div class="radio">
-                <label><input type="radio" name="issue" ng-click="filterIssuesByDueDate('Today')"/>Today</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="issue" ng-click="filterIssuesByDueDate('InThreeDays')"/>In Three Days</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="issue" ng-click="filterIssuesByDueDate('InFiveDays')"/>In Five Days</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="issue" ng-click="filterIssuesByDueDate('ThisWeek')"/>This Week</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="issue" ng-click="filterIssuesByDueDate('InTenDays')"/>In Ten Days</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="issue" ng-click="filterIssuesByDueDate('InTwoWeeks')"/>In Two Weeks</label>
-            </div>
-            <div class="radio">
-                <label><input type="radio" name="issue" ng-click="filterIssuesByDueDate('All')"/>All Issues</label>
-            </div>
-        </div>
-        <div>
-            <h5 class="bold">Filter by status:</h5>
-            <div class="checkbox">
-                <label><input type="checkbox" ng-model="issueStatus['Open']"/>Open</label>
-            </div>
-            <div class="checkbox">
-                <label><input type="checkbox" ng-model="issueStatus['InProgress']"/>In Progress</label>
-            </div>
-            <div class="checkbox">
-                <label><input type="checkbox" ng-model="issueStatus['StoppedProgress']"/>Stopped Progress</label>
-            </div>
-            <div class="checkbox">
-                <label><input type="checkbox" ng-model="issueStatus['Closed']"/>Closed</label>
-            </div>
-        </div>
-        <div>
-            <h5 class="bold">Filter by priority:</h5>
-            <input type="text" class="form-control" ng-model="filterByPriority.Priority.Name"
-                   placeholder="Priority name"/>
-        </div>
+    <!-- Filters -->
+    <div class="col-md-2" ng-include="'views/partials/issue-filters.html'">
     </div>
     <div class="col-md-10">
         <table class="table table-hover">
@@ -120,7 +57,7 @@
                 <td>{{issue.Description}}</td>
                 <td>{{issue.DueDate | date}}</td>
                 <td>{{issue.Assignee.Username}}</td>
-                <td >{{issue.Priority.Name}}</td>
+                <td>{{issue.Priority.Name}}</td>
                 <td>{{issue.Status.Name}}</td>
             </tr>
             </tbody>
