--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/issues/edit-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/issues/edit-issue.html
@@ -57,8 +57,8 @@
         </div>
         <div class="form-group">
             <div class="col-md-9 col-md-offset-3">
-                <button class="btn btn-success" ng-disabled="editIssueForm.$invalid"
-                        ng-click="editIssue(issue, dt)">Edit Issue
+                <button class="btn btn-success" ng-disabled="editIssueForm.$invalid" ng-click="editIssue(issue, dt)">
+                    Edit Issue
                 </button>
                 <a ng-href="#/issues/{{issueId}}" class="btn btn-default">Cancel</a>
             </div>
