--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit-project.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit-project.html
@@ -21,8 +21,10 @@
     <div class="form-group">
         <label for="labels" class="control-label col-md-3">Labels</label>
         <div class="col-md-8">
-            <input type="text" id="labels" ng-model="project.Labels" to-string-formatter to-array-object-parser
-                   class="form-control" required="required">
+            <tags-input id="labels" ng-model="project.Labels" key-priority="Id" display-property="Name" placeholder="Labels"
+                        replace-spaces-with-dashes="false" required="required">
+                <auto-complete source="loadLabels($query)" min-length="0"></auto-complete>
+            </tags-input>
         </div>
     </div>
     <div class="form-group">
@@ -40,8 +42,8 @@
     </div>
     <div class="form-group">
         <div class="col-md-9 col-md-offset-3">
-            <button class="btn btn-primary" ng-disabled="editProjectForm.$invalid"
-                    ng-click="editProject(project)">Edit
+            <button class="btn btn-success" ng-disabled="editProjectForm.$invalid" ng-click="editProject(project)">
+                Edit Project
             </button>
             <a ng-href="#/projects/{{projectId}}" class="btn btn-default">Cancel</a>
         </div>
