js/ name change

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/add-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/add-issue.html
@@ -74,7 +74,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button class="btn btn-success" ng-click="addIssue(issueData, selectedProject, dt, issueLabels)"
+            <button type="button" class="btn btn-success" ng-click="addIssue(issueData, selectedProject, dt, issueLabels)"
                     ng-disabled="issueAddForm.$invalid" data-dismiss="modal">
                 Add Issue
             </button>
