--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/add-project.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/add-project.html
@@ -50,7 +50,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button class="btn btn-success" ng-click="addProject(projectData, projectLabels)" ng-disabled="addProjectForm.$invalid" data-dismiss="modal">
+            <button type="button" class="btn btn-success" ng-click="addProject(projectData, projectLabels)" ng-disabled="addProjectForm.$invalid" data-dismiss="modal">
                 Add Project
             </button>
             <a href="#/" class="btn btn-default" data-dismiss="modal">Cancel</a>
