--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit-project.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit-project.html
@@ -42,7 +42,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-9 col-md-offset-3">
-            <button class="btn btn-success" ng-disabled="editProjectForm.$invalid" ng-click="editProject(project)">
+            <button type="button" class="btn btn-success" ng-disabled="editProjectForm.$invalid" ng-click="editProject(project)">
                 Edit Project
             </button>
             <a ng-href="#/projects/{{projectId}}" class="btn btn-default">Cancel</a>
