add delay on pages

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
@@ -49,6 +49,20 @@
     height: 3px;
 }
 
+#loading-bar .bar {
+    background: white;
+}
+#loading-bar-spinner .spinner-icon {
+    border-top-color:  white;
+    border-left-color: white;
+}
+/*#loading-bar .peg {*/
+    /*-moz-box-shadow: white 1px 0 6px 1px;*/
+    /*-ms-box-shadow: white 1px 0 6px 1px;*/
+    /*-webkit-box-shadow: white 1px 0 6px 1px;*/
+    /*box-shadow: white 1px 0 6px 1px;*/
+/*}*/
+
 .even {
     background-color: #f5f5f0;
 }
@@ -85,4 +99,37 @@ button:hover
 select:-moz-focusring {
     color: transparent;
     text-shadow: 0 0 0 #000;
+}
+
+.delay {
+    transition-delay: 0.5s;
+}
+
+.delay.ng-hide-add,
+.delay.ng-hide-remove,
+.loading-text.ng-hide-add,
+.loading-text.ng-hide-remove {
+    -webkit-transition:all linear 0.5s;
+    -moz-transition:all linear 0.5s;
+    -o-transition:all linear 0.5s;
+    transition:all linear 0.5s;
+    display:block!important;
+}
+.delay.ng-hide-add,
+.delay.ng-hide-remove {
+    transition-delay: 0.5s;
+}
+
+.delay.ng-hide-add.ng-hide-add-active,
+.delay.ng-hide-remove,
+.loading-text.ng-hide-add.ng-hide-add-active,
+.loading-text.ng-hide-remove {
+    opacity:0;
+}
+
+.delay.ng-hide-add,
+.delay.ng-hide-remove.ng-hide-remove-active,
+.loading-text.ng-hide-add,
+.loading-text.ng-hide-remove.ng-hide-remove-active {
+    opacity:1;
 }
