--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
@@ -31,37 +31,18 @@
 
 .form-control.display-validation.ng-not-empty.ng-dirty.ng-valid-parse.ng-valid-required.ng-invalid.ng-invalid-minlength.ng-touched:focus,
 .form-control.display-validation.ng-not-empty.ng-dirty.ng-valid-required.ng-invalid.ng-invalid-pattern.ng-touched:focus,
-.form-control.display-validation.ng-not-empty.ng-dirty.ng-valid-parse.ng-valid-required.ng-touched.ng-invalid.ng-invalid-confirm-password.ng-valid-minlength:focus{
+.form-control.display-validation.ng-not-empty.ng-dirty.ng-valid-parse.ng-valid-required.ng-touched.ng-invalid.ng-invalid-confirm-password.ng-valid-minlength:focus {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
-}
-
-/*.custom-tags.ng-pristine .tags {*/
-    /*box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
-    /*border: 1px solid #ccc*/
-/*}*/
-
-
-.ng-pristine.ng-untouched.ng-isolate-scope.ng-empty.ng-invalid.ng-invalid-required.ng-valid-max-tags.ng-valid-min-tags.ng-valid-leftover-text {
-
-}
-
-#loading-bar .bar {
-    height: 3px;
 }
 
 #loading-bar .bar {
     background: white;
 }
+
 #loading-bar-spinner .spinner-icon {
-    border-top-color:  white;
+    border-top-color: white;
     border-left-color: white;
 }
-/*#loading-bar .peg {*/
-    /*-moz-box-shadow: white 1px 0 6px 1px;*/
-    /*-ms-box-shadow: white 1px 0 6px 1px;*/
-    /*-webkit-box-shadow: white 1px 0 6px 1px;*/
-    /*box-shadow: white 1px 0 6px 1px;*/
-/*}*/
 
 .even {
     background-color: #f5f5f0;
@@ -76,29 +57,11 @@
 }
 
 .gray-info {
-    color: slategray;
-}
-.inline-block {
-    display: inline-block;
-}
-a,
-textarea:hover,
-input:hover,
-textarea:active,
-input:active,
-textarea:focus,
-input:focus,
-button:focus,
-button:active,
-button:hover
-{
-    outline: none ;
-    -webkit-appearance:none;
+    color: gray;
 }
 
-select:-moz-focusring {
-    color: transparent;
-    text-shadow: 0 0 0 #000;
+.inline-block {
+    display: inline-block;
 }
 
 .delay {
@@ -109,12 +72,13 @@ select:-moz-focusring {
 .delay.ng-hide-remove,
 .loading-text.ng-hide-add,
 .loading-text.ng-hide-remove {
-    -webkit-transition:all linear 0.5s;
-    -moz-transition:all linear 0.5s;
-    -o-transition:all linear 0.5s;
-    transition:all linear 0.5s;
-    display:block!important;
+    -webkit-transition: all linear 0.5s;
+    -moz-transition: all linear 0.5s;
+    -o-transition: all linear 0.5s;
+    transition: all linear 0.5s;
+    display: block !important;
 }
+
 .delay.ng-hide-add,
 .delay.ng-hide-remove {
     transition-delay: 0.5s;
@@ -124,12 +88,12 @@ select:-moz-focusring {
 .delay.ng-hide-remove,
 .loading-text.ng-hide-add.ng-hide-add-active,
 .loading-text.ng-hide-remove {
-    opacity:0;
+    opacity: 0;
 }
 
 .delay.ng-hide-add,
 .delay.ng-hide-remove.ng-hide-remove-active,
 .loading-text.ng-hide-add,
 .loading-text.ng-hide-remove.ng-hide-remove-active {
-    opacity:1;
+    opacity: 1;
 }
